apps/base/vaultwarden/vaultwarden-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    secretName: wildcard-lab-mainertoo-com-tls
